hphp/hack/test/extended_reasons/refinement_equal.php.diff.exp
--- control

+++ test

@@ -1,6 +1,6 @@

 error: Typing[4110] Invalid return type [1]
--> Expected ~C because the type of this return is implicitly a like-type [2]
--> But got ?C [3]
+-> Expected C [2]
+-> But got null [3]
 
 hphp/hack/test/extended_reasons/refinement_equal.php:12:10
        4 | class C extends A {}